--- a/index.html
+++ b/index.html
@@ -1,26 +1,65 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
 
-    <meta charset="utf-8">
-    <title>Project step 3</title>
+<head>
 
-  </head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-  <body>
+  <title>Group 62</title>
 
-  <h1>History search database</h1>
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
+</head>
 
-  <h4>Add an entry</h4>
-  <a href="add.html">AddEntry</a> Add entry will allow you to add an entry to the database allowing you to add<br>
-	  a reference to a person or an event.
-	  <br>
-	  <br>
-  <h4>Search</h4>
-  <a href="search.html">Search</a> Search by region, person, event, city. Will return information based on input.
+<body>
 
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">Group 62</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Home
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="add.html">Add an Entry</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="search.html">Search Database</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-  </body>
+  <!-- Page Content -->
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h1 class="mt-5">History Search Database</h1>
+        <p class="lead">Choose your option:</p>
+        <ul class="list-unstyled">
+			<li><a href="add.html">Add an entry</li>
+			<li><a href="search.html">Search!</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.slim.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+</body>
 
 </html>
