--- a/add.html
+++ b/add.html
@@ -1,36 +1,68 @@
 <!DOCTYPE html>
-<html>
-	<body>
-	Here is where we will be able to add an entry. You can select to enter a region, person, city, or event.
-	With that you can specify the different attributes of each, and click upload and it will insert it.
-	
-	<br>
+<html lang="en">
 
-	<h3>Add Region</h3>
-			<a href="addRegion.html">Add Region!</a>
+<head>
 
-	<br>
-	<br>
-	<h3>Add Event</h3>
-			<a href="addEvent.html">Add Event!</a>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-	<br>
-	<br>
-	<h3>Add Person</h3>
-			<a href="addPerson.html">Add Person!</a>
-	<br>
-	<br>
-	<h3>Add City</h3>
-			<a href="addCity.html">Add city!</a>
-	
-					
-	
-	
-	
-	</body>
+  <title>Group 62</title>
 
-	
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
+</head>
 
+<body>
+
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">Group 62</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Home
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="add.html">Add an Entry</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="search.html">Search Database</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Page Content -->
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h1 class="mt-5">Add an entry to the database</h1>
+        <p class="lead">What would you like to add?</p>
+        <ul class="list-unstyled">
+			<li><a href="addRegion.html">Add a region</a></li>
+			<li><a href="addEvent.html">Add Event!</a></li>
+			<li><a href="addPerson.html">Add Person!</a></li>
+			<li><a href="addCity.html">Add city!</a></li>
+
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.slim.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+</body>
 
 </html>
