--- a/addPerson.html
+++ b/addPerson.html
@@ -1,8 +1,54 @@
 <!DOCTYPE html>
-<html>
-	<body>
-		<h1>Add Person</h1>
+<html lang="en">
 
+<head>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>Group 62</title>
+
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+</head>
+
+<body>
+
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">Group 62</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Home
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="add.html">Add an Entry</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="search.html">Search Database</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Page Content -->
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h1 class="mt-5">Add person</h1>
+		<h5 class="mt-5">Add your person</h3>
+		
 		<form action="/action_page.php">
 			ID: <input type="text" name="id"><br>
 			Name: <input type="text" name="name"><br>
@@ -11,6 +57,7 @@
 			Region ID: <input type="text" name="rid"><br>
 			Time periodID: <input type="text" name="time"><br>
 		</form>
+		<br><br><br><br><br>
 
 		<h3>List of People</h3>
 			<pre style="font-size: 13pt;">ID		Name	Description	EventID			RegionID		Time Period</pre>  
@@ -20,5 +67,16 @@
 
 
 
-	</body>
+
+
+      </div>
+    </div>
+  </div>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.slim.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+</body>
+
 </html>
