--- a/addRegion.html
+++ b/addRegion.html
@@ -1,8 +1,54 @@
-<!DOCTYPE hmtl>
-<html>
-	<body>
-		<h1> Add Region</h1>
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>Group 62</title>
+
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+</head>
+
+<body>
+
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">Group 62</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Home
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="add.html">Add an Entry</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="search.html">Search Database</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Page Content -->
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h1 class="mt-5">Add region</h1>
+		<h5 class="mt-5">Add your region</h3>
+		
 		<form action="/action_page.php">
 			 ID: <input type="text" name="id"><br>
 			 Region Name: <input type="text" name="rname"><br>
@@ -11,16 +57,27 @@
 
 		<button type="button">Insert</button>
 
+		<br><br><br><br><br><br>
 
 
 		<h3>List of Regions</h3>
 			<pre style="font-size: 13pt;">ID		Region Name</pre>  
-			<pre style="font-size: 10pt;">1			Mediterranean <button type="button"> Delete</button> <button type="button"> Update</button> </pre>
-			<pre style="font-size: 10pt;">2			Asia <button type="button"> Delete</button> <button type="button"> Update</button> </pre>
-			<pre style="font-size: 10pt;">3			Middle East <button type="button"> Delete</button> <button type="button"> Update</button>  </pre>
+			<pre style="font-size: 10pt;">			1		Mediterranean <button type="button"> Delete</button> <button type="button"> Update</button> </pre>
+			<pre style="font-size: 10pt;">		2		Asia <button type="button"> Delete</button> <button type="button"> Update</button> </pre>
+			<pre style="font-size: 10pt;">			3		Middle East <button type="button"> Delete</button> <button type="button"> Update</button>  </pre>
 
 
 
-	</body>
+
+
+      </div>
+    </div>
+  </div>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.slim.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+</body>
 
 </html>
